Trying to fix input file alignment issue

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -448,9 +448,7 @@ footer {
   width: 100%;
   height: 45px;
   margin: 0 0 11px;
-  padding-right: 45px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 45px 10px 0;
   color: rgb(0, 0, 0);
   font: 100 15px/20px "OpenSans-Light";
   white-space: nowrap;
@@ -461,6 +459,11 @@ footer {
   -ms-transition: all 0.2s ease-out;
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
+}
+
+.input-prepend-file {
+  height: auto;
+  padding-left: 10px;
 }
 
 .input-icon {
